load("//tools/install:install.bzl", "install_files")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

# Make our package requirements (but not manual scripts) available to
# downstream projects.
exports_files([
    "mac/Brewfile-binary",
    "mac/Brewfile-build",
    "mac/Brewfile-developer",
    "python/pdm.lock",
    "python/pyproject.toml",
    "python/requirements.txt",
    "ubuntu/packages-noble-binary.txt",
    "ubuntu/packages-noble-build.txt",
    "ubuntu/packages-noble-developer.txt",
    "ubuntu/packages-resolute-binary.txt",
    "ubuntu/packages-resolute-build.txt",
    "ubuntu/packages-resolute-developer.txt",
])

install_files(
    name = "install",
    dest = "share/drake/setup",
    files = select({
        "//tools/cc_toolchain:apple": [
            "mac/Brewfile-binary",
            "mac/install_prereqs_binary.sh",
            "python/pdm.lock",
            "python/pyproject.toml",
            "python/requirements.txt",
        ],
        "//tools/cc_toolchain:linux": [
            "ubuntu/install_prereqs_binary.sh",
            "ubuntu/packages-noble-binary.txt",
            "ubuntu/packages-resolute-binary.txt",
        ],
        "//conditions:default": [],
    }),
    strip_prefix = [
        "mac",
        "ubuntu",
        "python",
    ],
    rename = {
        "share/drake/setup/install_prereqs_binary.sh": "install_prereqs",
    },
)

add_lint_tests()
