load("//tools/install:install.bzl", "install_files")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:drake_py.bzl", "drake_py_library", "drake_py_unittest")

package(default_visibility = ["//visibility:private"])

# Make our prerequisites data (but not scripts) available to downstream
# projects.
PREREQUISITES_DATA = glob([
    "**/Brewfile*",
    "**/*.lock",
    "**/*.toml",
    "**/*.txt",
])

exports_files(
    PREREQUISITES_DATA,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "prerequisites_data",
    srcs = PREREQUISITES_DATA,
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "install_prereqs",
    srcs = ["install_prereqs.py"],
    data = [":prerequisites_data"],
)

install_files(
    name = "install",
    dest = "share/drake/setup",
    files = select({
        "//tools/cc_toolchain:apple": [
            "mac/Brewfile-binary",
            "mac/install_prereqs_binary.sh",
            "python/pdm.lock",
            "python/pyproject.toml",
            "python/requirements.txt",
        ],
        "//tools/cc_toolchain:linux": [
            "ubuntu/install_prereqs_binary.sh",
            "ubuntu/packages-noble-binary.txt",
            "ubuntu/packages-resolute-binary.txt",
        ],
        "//conditions:default": [],
    }),
    strip_prefix = [
        "mac",
        "ubuntu",
        "python",
    ],
    rename = {
        "share/drake/setup/install_prereqs_binary.sh": "install_prereqs",
    },
    visibility = ["//:__pkg__"],
)

drake_py_unittest(
    name = "install_prereqs_test",
    deps = [
        ":install_prereqs",
        "@rules_python//python/runfiles",
    ],
)

add_lint_tests()
